[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemies/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Extra/Sprites/Bullet-red.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0312

[node name="Projectile" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -2 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.999999, -1 )
scale = Vector2( 1.8, 1.7 )

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
